--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/SOLUTIONLINK_logo_symbol_color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>template-scribe-mail</title>
+    <title>솔링크 메일 어시스턴트</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
